--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -21,7 +21,10 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pyinstaller
+          pip install pyinstaller googletrans==4.0.2
+    
+      - name: Check installed packages (debug)
+        run: pip list
 
       - name: Build executable with PyInstaller
         run: |
@@ -30,5 +33,5 @@ jobs:
       - name: Upload executable
         uses: actions/upload-artifact@v4
         with:
-          name: main-exe
-          path: dist/main.exe
+          name: frecri-exe
+          path: dist/frecri.exe
