--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Build executable with PyInstaller
         run: |
-          python -m pyinstaller --onefile --windowed --add-data "format.propierties;." main.py
+          python -m pyinstaller --onefile --windowed --add-data format.propierties;. main.py
 
       - name: Upload executable
         uses: actions/upload-artifact@v4
