--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -21,10 +21,13 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pyinstaller googletrans==4.0.2
+          python -m pip install googletrans==4.0.2
     
       - name: Check installed packages (debug)
         run: pip list
+
+      - name: List files (debug)
+        run: dir
 
       - name: Build executable with PyInstaller
         run: |
