--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -18,20 +18,18 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install dependencies
+      - name: Install and run PyInstaller
         run: |
           python -m pip install --upgrade pip
-          python -m pip install pyinstaller googletrans==4.0.2
+          python -m pip install pyinstaller
+          python -m pyinstaller --onefile --windowed --add-data format.propierties;. main.py
+
     
       - name: Check PyInstaller installation
         run: python -m pip show pyinstaller
 
       - name: List files (debug)
         run: dir
-
-      - name: Build executable with PyInstaller
-        run: |
-          python -m pyinstaller --onefile --windowed --add-data format.propierties;. main.py
 
       - name: Upload executable
         uses: actions/upload-artifact@v4
