--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -20,9 +20,7 @@ jobs:
 
       - name: Install and run PyInstaller
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install pyinstaller
-          python -m pyinstaller --onefile --windowed --add-data format.propierties;. main.py
+            python -m pip install --upgrade pip && python -m pip install pyinstaller && python -m pyinstaller --onefile --windowed --add-data format.propierties;. main.py
 
     
       - name: Check PyInstaller installation
