--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -19,8 +19,7 @@ jobs:
           python-version: '3.11'
 
       - name: Install and run PyInstaller
-        run: |
-            python -m pip install --upgrade pip && python -m pip install pyinstaller && python -m pyinstaller --onefile --windowed --add-data format.propierties;. main.py
+        run: python -m pip install --upgrade pip && python -m pip install pyinstaller && python -m pyinstaller --onefile --windowed --add-data format.propierties;. main.py
 
     
       - name: Check PyInstaller installation
