--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -20,7 +20,10 @@ jobs:
 
       - name: Install and run PyInstaller
         shell: cmd
-        run: python -m pip install --upgrade pip && python -m pip install pyinstaller && python -m pyinstaller --onefile --windowed --add-data format.propierties;. main.py
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install pyinstaller
+          pyinstaller --onefile --windowed --add-data format.propierties;. main.py
 
     
       - name: Check PyInstaller installation
