--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install pyinstaller
-          pyinstaller --onefile --windowed --add-data format.propierties;. main.py
+          pyinstaller --onefile --windowed --add-data format.propierties;. --name frecri main.py
 
     
       - name: Check PyInstaller installation
