--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -23,8 +23,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install pyinstaller
-          pyinstaller --onefile --add-data format.propierties;. --name frecri main.py
-        #   pyinstaller --onefile --windowed --add-data format.propierties;. --name frecri main.py
+          pyinstaller --onefile --add-data format.properties;. --name frecri main.py
+        #   pyinstaller --onefile --windowed --add-data format.properties;. --name frecri main.py
 
     
       - name: Check PyInstaller installation
