--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -23,18 +23,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install pyinstaller
-          pyinstaller --onefile --add-data format.properties;. --name frecri main.py
-        #   pyinstaller --onefile --windowed --add-data format.properties;. --name frecri main.py
-
-    
-      - name: Check PyInstaller installation
-        run: python -m pip show pyinstaller
-
-      - name: List files (debug)
-        run: dir
+          pyinstaller --onefile --windowed --add-data format.properties;. --name frecri main.py
+        
+      - name: Package executable into zip
+        run: |
+            powershell Compress-Archive -Path dist\frecri.exe -DestinationPath dist\frecri-win.zip
 
       - name: Upload executable
         uses: actions/upload-artifact@v4
         with:
-          name: frecri-exe
-          path: dist/frecri.exe
+          name: frecri-win-zip
+          path: dist/frecri-win.zip
